add webpack-dev-server and react

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <h2 class="page__title">タイムライン</h2>
       <ul id="js-book-list" class="book-list"></ul>
     </div>
-
-    <script src="/app.js"></script>
+    <div id="react-root"></div>
+    <script src="dist/main.js"></script>
   </body>
 </html>
